# ml-options-screener

./: .env.example  .gitignore  LICENSE  README.md  check_data.py  config.example.py  main.py  models.py  option_greeks.py  option_screener.py  pyproject.toml
.github/workflows/: daily_inference.yml  daily_scan.yml  generate_labels.yml
.streamlit/: config.toml  secrets.toml.example
frontend/: app.py
ml_models/: covered_call_model.joblib
notebooks/: 01_eda.ipynb  02_model_training.ipynb
screener/: main.py  option_screener.py
screener/modules/: database.py  transformations.py
screener/scripts/: backtest.py  generate_labels.py  predict_live_trades.py
screener/services/: market_data.py  storage.py
shared/: models.py
